<resources>
    <string name="app_name">AnimationCourse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_holder">Place Holder</string>
    <string name="constraint_sets">Constraint Sets</string>
    <string name="classic_animation">Classic Animation</string>
    <string name="hallo">HALLO</string>
    <string name="res_button">ResButton</string>
    <string name="frame_by_frame_animation_text">This is a frame by frame animation</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="background_animation">Background Animation</string>
    <string name="list_effects">List Effects</string>
    <string name="object_animator">Object Animator</string>
    <string name="click_me">Click ME</string>
</resources>