<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.invicta.animationcourse.viewModel.MainPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.MainPageFragment">

        <Button
            android:id="@+id/constraint_sets_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.onConstrainSetButtonClicked()}"
            android:text="@string/constraint_sets"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/place_holder_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.onPlaceHolderButtonClicked()}"
            android:text="@string/place_holder"
            app:layout_constraintEnd_toEndOf="@+id/constraint_sets_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_sets_button" />

        <Button
            android:id="@+id/classic_anim_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.onClassicAnimationsButtonClicked()}"
            android:text="@string/classic_animation"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/place_holder_button"
            app:layout_constraintStart_toStartOf="@+id/place_holder_button"
            app:layout_constraintTop_toBottomOf="@+id/place_holder_button" />

        <Button
            android:id="@+id/res_anim_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.onResourcesAnimationsButtonClicked()}"
            android:text="@string/res_button"
            app:layout_constraintEnd_toEndOf="@+id/classic_anim_button"
            app:layout_constraintStart_toStartOf="@+id/classic_anim_button"
            app:layout_constraintTop_toBottomOf="@+id/classic_anim_button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.onBackGroundAnimationButtonClicked()}"
            android:text="@string/background_animation"
            app:layout_constraintEnd_toEndOf="@+id/res_anim_button"
            app:layout_constraintStart_toStartOf="@+id/res_anim_button"
            app:layout_constraintTop_toBottomOf="@+id/res_anim_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>